--- a/Content/Release Notes.htm
+++ b/Content/Release Notes.htm
@@ -4,7 +4,8 @@
         <link href="Resources/TableStyles/Basic.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <h1>Release Notes</h1>
+        <h1>
+            <MadCap:concept term="Release Notes" />Release Notes</h1>
         <table style="width: 100%;mc-table-style: url('Resources/TableStyles/Basic.css');" class="TableStyle-searchvar" cellspacing="3">
             <col class="TableStyle-searchvar-Column-Column1" style="width: 25%;" />
             <col class="TableStyle-searchvar-Column-Column1" style="width: 75%;" />
