--- a/Content/Search-Results.htm
+++ b/Content/Search-Results.htm
@@ -3,7 +3,6 @@
     <head>
     </head>
     <body>
-        <p>Test this stuff out . </p>
-        <MadCap:searchResultsProxy data-mc-skin="/Project/Skins/SearchResults.flskn" />
+        <p>Test</p>
     </body>
 </html>
