--- a/Content/Article Template.htm
+++ b/Content/Article Template.htm
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
+        <style>
+        </style>
     </head>
     <body>
         <h1>Article Heading</h1>
@@ -16,10 +18,34 @@
                 </tr>
             </tbody>
         </table>
-        <h2 style="mc-locked: unlocked;">Summary:</h2>
-        <p>Type Summary Here</p>
+        <h2 style="mc-locked: unlocked;"><a name="Summary:"></a>Summary:</h2>
+        <p><a href="file:///S:/SolutionsOnline/Resources/PDF/Learner-Guides/Learner-Guide-lighthouse-Forms.pdf">Link</a>
+        </p>
         <h2 style="mc-locked: unlocked;">Full Description:</h2>
         <p MadCap:conditions="">Type Full Description Here</p>
+        <p>slideshow</p>
+        <div id="mySlideShow1">
+            <MadCap:slideshow>
+                <MadCap:slide>
+                    <h2>Slide 1</h2>
+                    <MadCap:dropDown>
+                        <MadCap:dropDownHead>
+                            <MadCap:dropDownHotspot>Delete this text and replace it with your own slide content.</MadCap:dropDownHotspot>
+                        </MadCap:dropDownHead>
+                        <MadCap:dropDownBody>
+                            <p>You can place almost any kind of content into a slide, including text, tables, snippets, images, multimedia, and more.</p>
+                        </MadCap:dropDownBody>
+                    </MadCap:dropDown>
+                    <p>&#160;</p>
+                </MadCap:slide>
+                <MadCap:slide>
+                    <h2>Slide 2</h2>
+                    <p>Delete this text and replace it with your own slide content.</p>
+                    <p>You can place almost any kind of content into a slide, including text, tables, snippets, images, multimedia, and more.</p>
+                    <p>&#160;</p>
+                </MadCap:slide>
+            </MadCap:slideshow>
+        </div>
         <h2 style="mc-locked: unlocked;">Solution:</h2>
         <p>Type Solution Here</p>
         <h2 style="mc-locked: unlocked;">Attribution:</h2>
@@ -47,5 +73,8 @@
                 </tr>
             </tbody>
         </table>
+        <MadCap:menuProxy style="mc-toc-depth: 2;mc-context-sensitive: True;mc-include-parent: True;mc-include-siblings: True;mc-include-children: True;" mc-linked-toc="$topicHeadings" />
+        <script>
+        </script>
     </body>
 </html>
