--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -10,7 +10,7 @@
         <div class="home-layout">
             <div class="home-section">
                 <div class="home-tiles">
-                    <div>
+                    <div class="topic-hero" style="background-position: center center">
                         <p>
                             <img src="Resources/Images/Home/icon-circle1.png" />
                         </p>
@@ -19,7 +19,14 @@
                     <div>
                         <p><a href="http://forums.madcapsoftware.com/index.php"><img src="Resources/Images/Home/icon-circle2.png" /></a>
                         </p>
-                        <p>Need help getting your project configured? Contact <a href="https://www.madcapsoftware.com/support/contact-options.aspx">MadCap Software Technical&#160;Support</a></p>
+                        <MadCap:dropDown>
+                            <MadCap:dropDownHead>
+                                <MadCap:dropDownHotspot>Need help getting your project configured? Contact <a href="https://www.madcapsoftware.com/support/contact-options.aspx">MadCap Software Technical&#160;Support</a></MadCap:dropDownHotspot>
+                            </MadCap:dropDownHead>
+                            <MadCap:dropDownBody>
+                                <p>Test</p>
+                            </MadCap:dropDownBody>
+                        </MadCap:dropDown>
                     </div>
                 </div>
             </div>
