--- a/Content/Release Notes.htm
+++ b/Content/Release Notes.htm
@@ -1,32 +1,60 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
-        <link href="Resources/TableStyles/Basic.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
         <h1>
             <MadCap:concept term="Release Notes" />Release Notes</h1>
-        <table style="width: 100%;mc-table-style: url('Resources/TableStyles/Basic.css');" class="TableStyle-searchvar" cellspacing="3">
-            <col class="TableStyle-searchvar-Column-Column1" style="width: 25%;" />
-            <col class="TableStyle-searchvar-Column-Column1" style="width: 75%;" />
-            <thead>
-                <tr class="TableStyle-searchvar-Head-Header1">
-                    <th class="TableStyle-searchvar-HeadE-Column1-Header1">Bug</th>
-                    <th class="TableStyle-searchvar-HeadD-Column1-Header1">Description</th>
-                </tr>
-            </thead>
+        <table style="width: 100%;">
+            <col />
+            <col />
+            <col />
+            <col />
             <tbody>
-                <tr class="TableStyle-searchvar-Body-Body1">
-                    <td class="TableStyle-searchvar-BodyE-Column1-Body1">123456</td>
-                    <td class="TableStyle-searchvar-BodyD-Column1-Body1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</td>
+                <tr>
+                    <td>Test</td>
+                    <td>Test</td>
+                    <td>Test</td>
+                    <td>&#160;</td>
                 </tr>
-                <tr class="TableStyle-searchvar-Body-Body2">
-                    <td class="TableStyle-searchvar-BodyB-Column1-Body2">654321</td>
-                    <td class="TableStyle-searchvar-BodyA-Column1-Body2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</td>
+                <tr>
+                    <td>Test</td>
+                    <td>Test</td>
+                    <td>&#160;</td>
+                    <td>&#160;</td>
+                </tr>
+                <tr>
+                    <td>&#160;</td>
+                    <td>&#160;</td>
+                    <td>&#160;</td>
+                    <td>&#160;</td>
                 </tr>
             </tbody>
         </table>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>
+                <MadCap:dropDownHotspot>Dropdown 1</MadCap:dropDownHotspot>
+            </MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>Text</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>
+                <MadCap:dropDownHotspot>Dropdown 2</MadCap:dropDownHotspot>
+            </MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>text</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>
+                <MadCap:dropDownHotspot>Dropdown 3</MadCap:dropDownHotspot>
+            </MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>text</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:glossaryProxy style="mc-glossary-headings: true;" />
     </body>
 </html>
