--- a/Content/System Requirements.htm
+++ b/Content/System Requirements.htm
@@ -3,12 +3,14 @@
     <head>
     </head>
     <body>
-        <h1>System Requirements</h1>
+        <h1>
+            <MadCap:concept term="Release Notes" />System Requirements<MadCap:concept term="Test" /></h1>
         <ul>
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
             <li>Egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris. </li>
             <li>Sed viverra tellus in hac habitasse platea.</li>
             <li> Arcu odio ut sem nulla pharetra diam sit amet nisl. </li>
+            <li>Release release</li>
         </ul>
         <p class="note" MadCap:autonum="&lt;span style=&quot;color: Red;&quot; class=&quot;mcFormatColor&quot;&gt;&lt;b&gt;Note: &lt;/b&gt;&lt;/span&gt; ">Tristique magna sit amet purus.</p>
     </body>
