--- a/Content/Table.htm
+++ b/Content/Table.htm
@@ -3,7 +3,14 @@
     <head>
     </head>
     <body>
-        <h1>Table Test</h1>
+        <h1>
+            <MadCap:concept term="Test" />Table Test</h1>
+        <p>Release</p>
+        <p>&#160;</p>
+        <h2>H2 test 1</h2>
+        <h2>H2 test 2</h2>
+        <h2>H2 test 3</h2>
+        <MadCap:listOfProxy style="mc-list-of-tag: h2;" />
         <table style="width: 100%;">
             <col style="width: auto;" />
             <col style="width: auto;" />
